check the first assessment

--- a/notebooks/EDA_on_features.ipynb
+++ b/notebooks/EDA_on_features.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1de69f395d24a0888503de1a1f52c69",
+       "model_id": "60f1b63204024fe0a384f0431deb3c93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "[5 rows x 979 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -851,6 +851,76 @@
    "source": [
     "qwk_score = qwk(after_second_df4[\"accuracy_group\"], after_second_df4[\"preds\"])\n",
     "print(f\"class 4: after second qwk: {qwk_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overall qwk: 0.5688\n"
+     ]
+    }
+   ],
+   "source": [
+    "qwk_score = qwk(\n",
+    "    np.concatenate(\n",
+    "        [\n",
+    "            all_first_df0[\"accuracy_group\"],\n",
+    "            all_first_df1[\"accuracy_group\"],\n",
+    "            all_first_df2[\"accuracy_group\"],\n",
+    "            all_first_df3[\"accuracy_group\"],\n",
+    "            all_first_df4[\"accuracy_group\"]\n",
+    "        ])\n",
+    "    , np.concatenate(\n",
+    "        [\n",
+    "            all_first_df0[\"preds\"],\n",
+    "            all_first_df1[\"preds\"],\n",
+    "            all_first_df2[\"preds\"],\n",
+    "            all_first_df3[\"preds\"],\n",
+    "            all_first_df4[\"preds\"]\n",
+    "        ])\n",
+    "    )\n",
+    "print(f\"overall qwk: {qwk_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overall qwk: 0.6309\n"
+     ]
+    }
+   ],
+   "source": [
+    "qwk_score = qwk(\n",
+    "    np.concatenate(\n",
+    "        [\n",
+    "            after_second_df0[\"accuracy_group\"],\n",
+    "            after_second_df1[\"accuracy_group\"],\n",
+    "            after_second_df2[\"accuracy_group\"],\n",
+    "            after_second_df3[\"accuracy_group\"],\n",
+    "            after_second_df4[\"accuracy_group\"]\n",
+    "        ])\n",
+    "    , np.concatenate(\n",
+    "        [\n",
+    "            after_second_df0[\"preds\"],\n",
+    "            after_second_df1[\"preds\"],\n",
+    "            after_second_df2[\"preds\"],\n",
+    "            after_second_df3[\"preds\"],\n",
+    "            after_second_df4[\"preds\"]\n",
+    "        ])\n",
+    "    )\n",
+    "print(f\"overall qwk: {qwk_score:.4f}\")"
    ]
   },
   {
