--- a/notebooks/lgb_11.ipynb
+++ b/notebooks/lgb_11.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,8 @@
     "from typing import List, Optional, Union, Tuple, Dict, Sequence\n",
     "\n",
     "from catboost import CatBoostClassifier, CatBoostRegressor\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.model_selection import train_test_split, KFold, StratifiedKFold\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.utils.multiclass import unique_labels\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "from tqdm import tqdm_notebook"
+    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from tqdm import tqdm_notebook as tqdm"
    ]
   },
   {
